namespaces/live.cloud-platform.service.justice.gov.uk/toyin-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toyin-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "toyinoluwanisola"
    cloud-platform.justice.gov.uk/application: "Toyin's Playground"
    cloud-platform.justice.gov.uk/owner: "Toyin: toyin.oluwanisola@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-helloworld-ruby-app"
    cloud-platform.justice.gov.uk/team-name: "toyin-test-team"
    cloud-platform.justice.gov.uk/review-after: "2023-05-20"
